fix: images in index page are not centered for max-width: 1200px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -574,15 +574,16 @@ textarea {
     }
 
     .description-image {
-        display: block;
+        display: flex;
+        align-items: center;
+        justify-content: center;
         max-height: 480px;
         overflow: hidden;
     }
 
     .description-image>img {
         width: 100%;
-        padding: 32px 0;
-        margin: auto;
+        padding: 0;
     }
 
     /* normal recipes */
